k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: azoulux-portfolio
  labels:
    app: azoulux-portfolio
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: azoulux-portfolio
