k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: azoulux-portfolio
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - azoulux.fr
      secretName: azoulux-portfolio-tls
  rules:
    - host: azoulux.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: azoulux-portfolio
                port:
                  number: 80
